--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 bevy = { version = "0.15.1", features = ["bevy_dev_tools"] }
 bevy-inspector-egui = "0.28.1"
-noisy_bevy = "0.8.0"
+noisy_bevy = { git = "https://github.com/kirillsurkov/noisy_bevy", branch = "normalization" }
 rand = "0.8.5"
 strum = "0.26.3"
 strum_macros = "0.26.4"
